--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+
+Anda bilang:
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sederhana Padang - Restoran Masakan Padang Autentik</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>ALAMEKA Jaya Minang</h1>
@@ -29,7 +33,7 @@
 
         <section id="tentang">
             <h2>Tentang Kami</h2>
-            <p>Sederhana Padang didirikan pada tahun 1998 dengan misi melestarikan dan menyajikan masakan Padang asli kepada seluruh masyarakat Indonesia. Dengan bahan-bahan pilihan dan proses memasak yang tradisional, kami menjamin cita rasa yang autentik dalam setiap hidangan.</p>
+            <p>Sederhana Padang didirikan pada tahun 1945 dengan misi melestarikan dan menyajikan masakan Padang asli kepada seluruh masyarakat Indonesia. Dengan bahan-bahan pilihan dan proses memasak yang tradisional, kami menjamin cita rasa yang autentik dalam setiap hidangan.</p>
         </section>
 
         <section id="menu">
