--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-
-Anda bilang:
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sederhana Padang - Restoran Masakan Padang Autentik</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,6 +21,9 @@ Anda bilang:
                 <li><a href="#pesan">Pesan Sekarang</a></li>
             </ul>
         </nav>
+
+        <!-- Tombol Dark Mode -->
+        <button id="dark-toggle">🌙 Dark Mode</button>
     </header>
 
     <main>
@@ -199,5 +200,7 @@ Anda bilang:
             <p>&copy; 2023 Sederhana Padang. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
